TEST_PROGRAMS/INVALID/05/if_rob_brace.go
/* If statement with Robillard braces*/

package main

func main() {
	x := true
	if x 
	{
		//Do nothing
	}
}
